Update documentation and build dependencies